[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-mesh-client"
version = "0.1.0"
description = "Python client framework for SAM (Sovereign Agent Mesh)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SAM Contributors" }]
dependencies = [
  "httpx>=0.24.0",
  "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0",
  "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sam_mesh*"]
