[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-mcp"
version = "0.1.0"
description = "Python SDK for Sovereign Agent Mesh (SAM) using MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
